<resources>
    <string name="app_name">projetoinvest</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_valor">Valor</string>
    <string name="str_liquidez">Liquidez </string>
    <string name="escolhe_liquidez">Liquidez</string>
    <string name="str_anual">Anual</string>
    <string name="str_mensal">Mensal</string>
    <string name="str_diaria">Diária</string>
    <string name="escolhe_emissor">Emissor (Banco/Corretora)</string>
    <string name="str_xpinvest">XP investimentos</string>
    <string name="str_novafutura">Nova Futura</string>
    <string name="str_orama">Órama Investimentos</string>
    <string name="escolhe_garantia">Garantia</string>
    <string name="str_FGC">FGC - Fundo Garantidor de Créditos</string>
    <string name="escolhe_tributacao">Tributação</string>
    <string name="str_sujeitotributacao">Sujeito a imposto de renda</string>
    <string name="str_isentotributacao">Isento de imposto de renda</string>
    <string name="hint_risco">Risco</string>
    <string name="escolhe_indexador">Indexador</string>
    <string name="str_cdb">CDB</string>
    <string name="str_lca">LCA</string>
    <string name="escolhe_ordenar">Ordenar por:</string>
    <string name="str_exretorno">Expectativa de Retorno</string>
    <string name="str_rentliquida">Rentabilidade Liquida</string>
    <string name="str_aplicar">APLICAR</string>
    <string name="msg_campo_obrigatorio">Campo Obrigatório</string>
    <string name="str_Valor">Valor</string>
    <string name="title_activity_cripto">Cripto</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="str_Ordenar">Ordenar</string>
    <string name="str_valormercado">Valor de Mercado</string>
    <string name="str_precoreal">Preço em Real</string>
    <string name="str_Risco">Risco</string>
    <string name="str_AplicMin">Aplicação Mínima</string>
    <string name="str_Cotizacao">Cotização</string>
    <string name="str_atedia1">Até Dia+1</string>
    <string name="str_atedia5">Até Dia+5</string>
    <string name="str_atedia10">Até Dia+10</string>
    <string name="str_atedia30">Até Dia+30</string>
    <string name="str_maiordia30">Maior que Dia+30</string>
    <string name="str_usuario">Usuário</string>
    <string name="str_senha">Senha</string>
    <string name="str_entrar">Entrar</string>
    <string name="str_valor">Valor</string>
    <string name="str_prazo">Prazo</string>


</resources>