<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.core.widget.NestedScrollView

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="14dp">

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilValor"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/hint_valor">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tieValor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:maxLength="150" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilPrazo"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/hint_prazo">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tiePrazo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:maxLength="20" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/escolhe_liquidez"
                android:textSize="18sp" />

            <RadioGroup
                android:id="@+id/rgEscolheLiquidez"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/rbDiaria"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/str_diaria" />

                <RadioButton
                    android:id="@+id/rbMensal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/str_mensal" />

                <RadioButton
                    android:id="@+id/rbAnual"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/str_anual" />


            </RadioGroup>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/escolhe_emissor"
                android:textSize="18sp" />

            <RadioGroup
                android:id="@+id/rgEscolheEmissor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/rbXpInvestimentos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/str_xpinvest" />

                <RadioButton
                    android:id="@+id/rbNovaFutura"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/str_novafutura" />

                <RadioButton
                    android:id="@+id/rbOrama"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/str_orama" />

                 <!--Colocar as que faltam -->

            </RadioGroup>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/escolhe_garantia"
                android:textSize="18sp" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:orientation="vertical"
                android:id="@+id/rgEscolheGarantia">

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/rbFGC"
                    android:text="@string/str_FGC"/>
                <!--colocar outra dps (ex:CETIP)-->



            </RadioGroup>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/escolhe_indexador"
                android:textSize="18sp" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:orientation="vertical"
                android:id="@+id/rgEscolheIndexador">

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/rbCDB"
                android:text="@string/str_cdb"/>

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/rbLCA"
                android:text="@string/str_lca"/>

                <!--colocar outros dps-->

                </RadioGroup>


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/escolhe_tributacao"
                    android:textSize="18sp" />

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:orientation="vertical"
                    android:id="@+id/rgEscolheTributacao">

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/rbSujeitoTributacao"
                    android:text="@string/str_sujeitotributacao"/>

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/rbIsentoTributacao"
                    android:text="@string/str_isentotributacao"/>

                </RadioGroup>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilRisco"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:hint="@string/hint_risco">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tieRisco"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:maxLength="20" />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/escolhe_ordenar"
                    android:textSize="18sp" />

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:orientation="vertical"
                    android:id="@+id/rgEscolheOrdenar">

                    <RadioButton
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/rbExRetorno"
                        android:text="@string/str_exretorno"/>

                    <RadioButton
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/rbRentLiquida"
                        android:text="@string/str_rentliquida"/>

                </RadioGroup>

                <Button
                    android:layout_width="164dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textSize="18sp"
                    android:text="@string/str_aplicar"
                    android:backgroundTint="#32cd32"
                    android:textColor="#FFFFFF"
                    android:layout_marginBottom="10dp"
                    android:id="@+id/btn_aplicar"/>


            </LinearLayout>


        </androidx.core.widget.NestedScrollView>
    </layout>