
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.core.widget.NestedScrollView

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="14dp">


        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/str_AplicMin"
                android:textSize="18sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilAplicMin"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tieAplicMin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:maxLength="150" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/str_Risco"
                android:textSize="18sp" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilRisco"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tieRisco"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:maxLength="20" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/str_Cotizacao"
                android:textSize="18sp" />




            <CheckBox
                android:id="@+id/rbAteDia1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/str_atedia1" />

            <CheckBox
                android:id="@+id/rbAteDia5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/str_atedia5" />

            <CheckBox
                android:id="@+id/rbAteDia10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/str_atedia10" />

            <CheckBox
                android:id="@+id/rbAteDia30"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/str_atedia30" />

            <CheckBox
                android:id="@+id/rbMaiorDia30"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/str_maiordia30" />

            <Button
                android:layout_width="164dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="18sp"
                android:text="@string/str_aplicar"
                android:backgroundTint="#04AA6D"
                android:textColor="#FFFFFF"
                android:layout_marginBottom="10dp"
                android:id="@+id/btn_aplicar"/>


        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</layout>