
    <layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools">

    <androidx.core.widget.NestedScrollView

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="14dp">


    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/str_Valor"
            android:textSize="18sp" />

        <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilValor"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tieValor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLength="150" />

    </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/str_prazo"
            android:textSize="18sp" />


        <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPrazo"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiePrazo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLength="20" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/escolhe_emissor"
        android:textSize="18sp" />




    <CheckBox
        android:id="@+id/rbXpInvestimentos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_xpinvest" />

    <CheckBox
        android:id="@+id/rbNovaFutura"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_novafutura" />

    <CheckBox
        android:id="@+id/rbOrama"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_orama" />

        <Button
            android:layout_width="164dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="18sp"
            android:text="@string/str_aplicar"
            android:backgroundTint="#04AA6D"
            android:textColor="#FFFFFF"
            android:layout_marginBottom="10dp"
            android:id="@+id/btn_aplicar"/>

    </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</layout>